Update library and generate
